@@ -680,7 +680,9 @@ static int sessioncommand(struct Channel *channel, struct ChanSess *chansess,
 #if DROPBEAR_SFTPSERVER
 			if ((cmdlen == 4) && strncmp(chansess->cmd, "sftp", 4) == 0) {
 				m_free(chansess->cmd);
-				chansess->cmd = m_strdup(SFTPSERVER_PATH);
+        char *expand_path = expand_homedir_path(SFTPSERVER_PATH);
+				chansess->cmd = m_strdup(expand_path);
+        m_free(expand_path);
 			} else 
 #endif
 			{
