@@ -1,3 +1,9 @@
+- The following settings conform with DROPBEAR_DEFAULT_CLI_AUTHKEY - home
+  directory is prepended unless there is a leading slash (~/ not recognized). 
+  *_PRIV_FILENAME
+  DROPBEAR_PIDFILE
+  SFTPSERVER_PATH
+
 2020.80 - 26 June 2020
 
 - Don't block authorized_keys logins with no-X11-forwarding or no-agent-forwarding 
